--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*<----- Root ----->*/
 :root {
   --bg-color: #e2e3e5;
-  --primary-color: #c9b60d/*#fff176;*/;
+  --primary-color: #c9b60d /*#fff176;*/;
   --dark: black;
   --titleSize: clamp(1rem, 3vw + 1rem, 3rem);
   --secondaryTitleSize: 2.5rem;
@@ -12,9 +12,6 @@
   --typewriterSpeed: 4s;
   --typewriterCharacters: 31;
 }
-
-
-
 
 /*<------      Global       ------>*/
 
@@ -31,7 +28,7 @@ body {
 
 h1 {
   font-size: var(--titleSize);
-  font-family: 'roboto mono';
+  font-family: "roboto mono";
   width: max-content;
   position: relative;
 }
@@ -60,7 +57,6 @@ h1::after {
     blink 850ms steps(var(--typewriterCharacters)) infinite;
 }
 
-
 h2 {
   margin-top: 0;
   margin-bottom: 0;
@@ -69,6 +65,10 @@ h2 {
   padding: var(--titlePadding);
   font-size: var(--secondaryTitleSize);
   font-weight: inherit;
+}
+
+h3 {
+  margin-left: 50px;
 }
 
 p {
@@ -90,14 +90,6 @@ strong {
   border-radius: 20px;
   padding: var(--regularPading);
 }
-
-
-
-
-
-
-
-
 
 /*<------      NavBar        ------>*/
 
@@ -156,14 +148,57 @@ nav li:hover::before {
   cursor: pointer;
 }
 
+/* <-----   About Me   ----->*/
 
+#about-me {
+  padding: var(--regularPading);
+}
 
+.about-me_card_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6rem;
+}
 
+.card-wrapper {
+  border: 2px solid var(--primary-color);
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  overflow: hidden;
+  width: 500px;
+  height: 500px;
+  animation: buble 15s ease-in-out infinite;
+}
 
+.about-me_card_container_img {
+  width: inherit;
+}
 
+.about-me_container_text {
+  display: flex;
+  flex-direction: column;
+  width: 680px;
+  padding: 20px;
+}
 
+.about-me_text {
+  font-size: 1.2rem;
+  font-weight: lighter;
+  line-height: 30px;
+}
 
+.tech-stack_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.tech-stack {
+  font-size: 50px;
+  display: flex;
+  gap: 50px;
+}
 
 /*<------    Body Section      ------>*/
 
@@ -178,7 +213,8 @@ nav li:hover::before {
   border-bottom-right-radius: 80px;
 }
 
-.container-home {  display: grid;
+.container-home {
+  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 0px 50px;
@@ -186,9 +222,12 @@ nav li:hover::before {
   grid-template-areas:
     "section-title img-mockup"
     "section-subtext img-mockup";
+  margin-top: 75px;
 }
 
-.section-subtext { grid-area: section-subtext; }
+.section-subtext {
+  grid-area: section-subtext;
+}
 
 .section-subtext {
   font-size: var(--subTitleSize);
@@ -206,7 +245,9 @@ nav li:hover::before {
   object-fit: fill;
 }
 
-.section-title { grid-area: section-title; }
+.section-title {
+  grid-area: section-title;
+}
 
 .section-title {
   margin-top: 0;
@@ -215,7 +256,6 @@ nav li:hover::before {
   padding: var(--titlePadding);
   font-size: var(--secondaryTitleSize);
 }
-
 
 .services-title {
   padding: var(--titlePadding);
@@ -235,11 +275,7 @@ nav li:hover::before {
   justify-content: center;
 }
 
-
 /*<--  Contact Section    -->*/
-
-
-
 
 /*<!-----   Animation   ----->*/
 
@@ -262,5 +298,16 @@ nav li:hover::before {
   }
 }
 
+@keyframes buble {
+  0% {
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
 
+  50% {
+    border-radius: 54% 46% 45% 55% / 64% 54% 46% 36%;
+  }
 
+  75% {
+    border-radius: 76% 24% 32% 68% / 26% 77% 23% 74%;
+  }
+}
